<resources>
    <string name="app_name">40k9th Scoring</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next Phase</string>
    <string name="previous">Previous Phase</string>
    <string name="exit">Exit</string>
    <string name="Round">Round: %1$d </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondaries">Secondaries</string>
    <string name="cp">Cp</string>
    <string name="primaries">Primaries</string>
    <string name="setup">Setup</string>

    <string name="command">Command</string>
    <string name="movement">Movement</string>
    <string name="psychic">Psychic</string>
    <string name="shooting">Shooting</string>
    <string name="charge">Charge</string>
    <string name="fight">Fight</string>
    <string name="endOfRound">End of round</string>
    <string name="_1_select_battle_size">1. Select Battle Size</string>
    <string name="settings">Settings</string>
    <string name="default_name">default name</string>
    <string name="save">save</string>
    <string name="auto_increment_cp">auto increment cp</string>
    <string name="update_data">Update data</string>
</resources>